# FrontEnd-FlowDesk

./: .gcloudignore  .gitignore  .replit  .replitenv  COMPARISON_TEST_VS_COMFORT.md  CORRECTED_VTK_CONFIGURATION.md  DATABASE_TESTS.md  DEPLOYMENT_SIZE_FIX.md  Dockerfile  FINAL_CFD_CONFIGURATION_SUMMARY.md  FIX_SUMMARY.md  INDUCTIVA_DICTIONARY.txt  MESHER_CONFIG_README.md  MESH_QUALITY_IMPROVEMENTS.md  MESH_REFINEMENT_RESOLUTION_LOG.md  OVERSET_PLAN.md  PRODUCTION_MONITORING.md  QUICK_START.md  SIGFPE_DELTACOEFFS_DIAGNOSIS.md  SUMMARY_CFD_CONFIGURATIONS.md  TEMPORARY_PASSWORD_REMOVAL_GUIDE.md  TESTING_GUIDE.md  TEST_SYSTEM_README.md  TURNSTILE_SETUP.md  WORKERS_README.md  WORKER_MANAGEMENT.md  analyze_mesh_quality.py  cfmesh_quick_reference.txt  checkWorkers.sh  check_gcs.mjs  controlDict_comfort30Iter_FINAL.txt  controlDict_comfort30Iter_INDUCTIVA.txt  controlDict_comfortTest_INDUCTIVA.txt  create-vtkjs.js  inductiva_cfmesh_runner.py  inductiva_script.py  locate_bad_cells.py  mesher_config.py  package-lock.json  package.json  (+47 more)
PYTHON_STEPS/: mainPipeline.py  mesher_config.py  pipeline_exceptions.py  step01_json2geo.py  step02_geo2mesh.py  step03_mesh2cfd.py  step04_cfd2result.py  step05_results2post.py
attached_assets/: FlowDeskModel - 2025-07-20T134849.600_1753013124312.json  FlowDeskModel - 2025-07-20T165536.101_1753023499452.json  FlowDeskModel - 2025-07-20T165634.277_1753023499458.json  FlowDeskModel - 2025-07-20T171243.721_1753027901236.json  Pasted--1-Add-a-new-state-variable-to-track-hover-position-separate-from-cursorPoint-which-is-used-duri-1741446111800.txt  (+355 more)
(+947 files in other folders)
