[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "inductiva==0.18.4",
    "requests>=2.32.5",
    "pyvista>=0.44.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "shapely>=2.0.0",
    "foamlib>=0.2.0",
    "pymeshlab>=2023.12",
    "psutil>=5.9.0",
    "tqdm>=4.66.0",
    "tarsafe>=0.0.5",
    "pillow>=11.3.0",
    "reportlab>=4.4.4",
    "matplotlib>=3.10.7",
]
